--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -21,7 +21,7 @@ overflow: hidden;
 }
 	body {
 	margin:0;
-	color:#edf3ff;
+
 	background:#c8c8c8;
 	overflow-y: hidden;
 	overflow-x: hidden;
@@ -43,10 +43,10 @@ a{color:inherit;text-decoration:none}
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
 .login-html{
-	    width: 73%;
-    height: 75%;
+	    width: 100%;
+    height: 100%;
 	position:absolute;
-	padding:90px 70px 50px 70px;
+	padding:12px 65px 60px 65px;
 	background:rgba(0, 0, 0, 0.18);
 }
 .login-html .sign-in-htm,
@@ -74,7 +74,7 @@ a{color:inherit;text-decoration:none}
 	text-transform:uppercase;
 }
 .login-html .tab{
-	font-size:22px;
+	color: #3300ff;
 	margin-right:15px;
 	padding-bottom:5px;
 	margin:0 15px 10px 0;
@@ -109,7 +109,7 @@ a{color:inherit;text-decoration:none}
 	border:1px solid #4bd69c;
 	padding:15px 20px;
 	border-radius:25px;
-	background:rgba(255,255,255,.1);
+	background:rgba(255, 255, 255, 0.64);
 }
 .login-form .group input[data-type="password"]{
 	text-security:circle;
@@ -199,5 +199,15 @@ a{color:inherit;text-decoration:none}
     border-bottom: 1px solid rgba(0,0,0,.125);
 }
 .button{
+	cursor: pointer;
+}
+.fa-home{
+	    font-size: 322% !important;
+}
+
+.tooltip-inner {
+	background: blue !important;
+}
+.cursor{
 	cursor: pointer;
 }
