--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -38,7 +38,7 @@ a{color:inherit;text-decoration:none}
 	max-width:510px;
 	min-height:564px;
 	position:relative;
-	background:url('../../img/anhlogin.jpg') no-repeat center;
+	background: rgba(0,0,0,0.5) ;
 	background-size: cover;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
