--- a/public/css/carosel.css
+++ b/public/css/carosel.css
@@ -1,8 +1,8 @@
 .search-sec{
-    padding: 2rem;
+    padding:2rem;
 }
 .search-slt{
-    
+    z-index: 99;
     display: block;
     width: 100%;
     font-size: 0.875rem;
@@ -26,13 +26,14 @@
     .search-sec{
         z-index: 99;
         position: relative;
-         margin-top: -145px;
+         margin-top: -144px;
         background: rgba(26, 70, 104, 0.51);
     }
 }
 
 @media (max-width: 992px){
     .search-sec{
+        z-index: 99;
         background: #1A4668;
     }
 }
